--- a/package.json
+++ b/package.json
@@ -1,126 +1,27 @@
 {
-    "name": "vr-analytics",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@gooddata/sdk-backend-tiger": "^8.11.0",
-        "@gooddata/sdk-model": "^8.11.0",
-        "@gooddata/sdk-ui": "^8.11.0",
-        "@gooddata/sdk-ui-charts": "^8.11.0",
-        "@gooddata/sdk-ui-dashboard": "^8.11.0",
-        "@gooddata/sdk-ui-ext": "^8.11.0",
-        "@gooddata/sdk-ui-filters": "^8.11.0",
-        "@gooddata/sdk-ui-geo": "^8.11.0",
-        "@gooddata/sdk-ui-pivot": "^8.11.0",
-        "aframe": "^1.3.0",
-        "aframe-charts-component": "^2.1.11",
-        "aframe-particle-system-component": "^1.1.3",
-        "aframe-react": "^4.4.0",
-        "classnames": "^2.3.1",
-        "d3": "^7.6.1",
-        "formik": "^2.2.9",
-        "lodash": "^4.17.15",
-        "plotly.js": "^2.16.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-helmet": "^6.1.0",
-        "react-plotly.js": "^2.6.0",
-        "react-router-dom": "^5.3.0",
-        "react-router-use-location-state": "^2.3.1",
-        "react-scripts": "5.0.1",
-        "recharts": "^2.1.16",
-        "three": "^0.146.0",
-        "use-location-state": "^2.3.1",
-        "yup": "^0.32.9"
-    },
-    "scripts": {
-        "start": "cross-env HTTPS=true PORT=8443 GENERATE_SOURCEMAP=false react-scripts start",
-        "start-new": "cross-env HTTPS=true PORT=8443 GENERATE_SOURCEMAP=false webpack serve --hot --server-type https",
-        "build": "react-scripts build",
-        "build-new": "webpack build",
-        "build-with-explicit-hostname": "cross-env REACT_APP_SET_HOSTNAME=true npm run build",
-        "eject": "react-scripts eject",
-        "test": "react-scripts test --setupFilesAfterEnv ./jest.setup.js",
-        "testcafe-backend": "rm -R ./build & yarn build & serve -l 5000 build",
-        "testcafe": "cross-env TEST_BACKEND=http://localhost:5000 ./scripts/run-testcafe.js",
-        "testcafe-visual": "cross-env TEST_MODE=visual ./scripts/run-testcafe.js",
-        "refresh-md": "node ./scripts/refresh-md.js --backend tiger"
-    },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not ie 11",
-            "not chrome < 51",
-            "not safari < 10",
-            "not android < 51"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "@babel/cli": "^7.7.2",
-        "@babel/core": "^7.7.2",
-        "@babel/plugin-proposal-class-properties": "^7.7.2",
-        "@babel/plugin-proposal-object-rest-spread": "^7.7.2",
-        "@babel/plugin-transform-async-to-generator": "^7.7.2",
-        "@babel/plugin-transform-typescript": "^7.7.2",
-        "@babel/polyfill": "^7.7.2",
-        "@babel/preset-env": "^7.7.2",
-        "@babel/preset-react": "^7.7.2",
-        "@babel/preset-typescript": "^7.7.2",
-        "@babel/runtime": "^7.7.2",
-        "@gooddata/catalog-export": "^8.11.0",
-        "@types/aframe": "^1.2.0",
-        "@types/enzyme": "^3.10.8",
-        "@types/express": "^4.17.11",
-        "@types/jest": "^26.0.20",
-        "@types/react": "^17.0.2",
-        "@types/react-dom": "^17.0.1",
-        "@types/react-helmet": "^6.1.0",
-        "@types/react-router-dom": "^5.1.7",
-        "@types/yup": "^0.29.11",
-        "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
-        "babel-loader": "^9.1.0",
-        "babel-plugin-add-module-exports": "^1.0.4",
-        "babel-plugin-lodash": "^3.3.4",
-        "cross-env": "^5.2.0",
-        "css-loader": "^6.7.1",
-        "dotenv-webpack": "^8.0.1",
-        "enzyme": "^3.10.0",
-        "fork-ts-checker-webpack-plugin": "^7.2.13",
-        "html-webpack-plugin": "^5.5.0",
-        "husky": "^3.0.0",
-        "prettier": "2.5.1",
-        "pretty-quick": "^3.1.3",
-        "sass": "^1.56.0",
-        "sass-loader": "^13.1.0",
-        "serve": "^11.3.2",
-        "source-map-loader": "^4.0.1",
-        "style-loader": "^3.3.1",
-        "styled-jsx": "^5.1.0",
-        "testcafe": "^1.18.3",
-        "typescript": "^4.1.5",
-        "typescript-loader": "^1.1.3",
-        "webpack": "^5.74.0",
-        "webpack-cli": "^4.10.0",
-        "webpack-dev-server": "^4.11.1"
-    },
-    "resolutions": {
-        "@types/react": "17"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "pretty-quick --staged --pattern \"**/*.*(js|jsx|ts|tsx|scss)\""
-        }
-    },
-    "engines": {
-        "node": ">=16"
-    }
+  "name": "vanilla",
+  "version": "1.0.0",
+  "description": "JavaScript example starter project",
+  "main": "index.html",
+  "scripts": {
+    "start": "parcel index.html --https --port 8443",
+    "build": "parcel build index.html"
+  },
+  "dependencies": {
+    "@gooddata/sdk-backend-tiger": "8.11.0",
+    "@gooddata/sdk-model": "8.11.0",
+    "@gooddata/sdk-ui": "8.11.0",
+    "chroma-js": "2.4.2",
+    "lodash": "4.17.21",
+    "parcel-bundler": "^1.6.1",
+    "react": "17.0.2"
+  },
+  "devDependencies": {
+    "@babel/core": "7.2.0",
+    "typescript": "4.4.4"
+  },
+  "resolutions": {
+    "@babel/preset-env": "7.13.8"
+  },
+  "keywords": ["javascript", "starter"]
 }
